--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"scripts": {
 		"build:admin": "wp-scripts build src/settings.js --webpack-src-dir=src/admin --webpack-copy-php --output-path=build/admin",
 		"build:public": "wp-scripts build src/public.js --webpack-src-dir=src/public --webpack-copy-php --output-path=build/public",
-		"build:blocks": "wp-scripts build src/blocks.js --webpack-src-dir=src/blocks --webpack-copy-php --output-path=build/blocks",
+		"build:blocks": "wp-scripts build --webpack-src-dir=src/blocks --webpack-copy-php --output-path=build/blocks",
 		"build": "npm-run-all --parallel build:admin build:public build:blocks",
 		"format": "wp-scripts format",
 		"lint:css": "wp-scripts lint-style",
@@ -20,15 +20,15 @@
 		"packages-update": "wp-scripts packages-update"
 	},
 	"devDependencies": {
-		"@wordpress/scripts": "^23.5.0"
+		"@wordpress/scripts": "^24.2.0"
 	},
 	"dependencies": {
-		"@wordpress/block-editor": "^9.5.0",
-		"@wordpress/blocks": "^11.12.0",
-		"@wordpress/components": "^19.15.0",
-		"@wordpress/i18n": "^4.13.0",
-		"@wordpress/icons": "^9.4.0",
-		"@wordpress/url": "^3.14.0",
+		"@wordpress/block-editor": "^10.1.0",
+		"@wordpress/blocks": "^11.17.0",
+		"@wordpress/components": "^21.1.0",
+		"@wordpress/i18n": "^4.18.0",
+		"@wordpress/icons": "^9.9.0",
+		"@wordpress/url": "^3.19.0",
 		"autoprefixer": "^10.4.7",
 		"lodash": "^4.17.21",
 		"npm-run-all": "^4.1.5",
