--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
 		"packages-update": "wp-scripts packages-update"
 	},
 	"devDependencies": {
-		"@wordpress/scripts": "^24.2.0"
+		"@wordpress/scripts": "^24.2.0",
+		"npm-run-all": "^4.1.5"
 	},
 	"dependencies": {
 		"@wordpress/block-editor": "^10.1.0",
@@ -31,7 +32,6 @@
 		"@wordpress/url": "^3.19.0",
 		"autoprefixer": "^10.4.7",
 		"lodash": "^4.17.21",
-		"npm-run-all": "^4.1.5",
 		"react-router-dom": "^6.3.0",
 		"stylis": "^4.1.1"
 	},
